# a11y-tree-data

./: .gitattributes  .gitignore  LICENSE-CODE.txt  README.md  orca_tree_traversal_description.txt
code/indextree-method-structural-nav/: Cargo.toml  README.md  REPORT_DATA.html  REPORT_DATA.md  lcov.info
code/indextree-method-structural-nav/benches/: benchmarks.rs
code/indextree-method-structural-nav/src/: indextree_ext.rs  lib.rs  main.rs  role_set.rs  validity.rs
code/linux-atspi-tree/: Cargo.toml
code/linux-atspi-tree/src/: main.rs
code/scripts/: get_stats.sh
data/: synthetic.json
metadata/: single-page-html-spec.json
