[package]
name = "indextree-method-structural-nav"
version = "0.1.0"
edition = "2021"

[dependencies]
atspi-common = { version = "0.9.0", default-features = false }
indextree = { version = "4.7.3", features = ["deser", "serde", "par_iter", "rayon"] }
itertools = "0.14.0"
rayon = "1.10.0"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5.1"
indextree-method-structural-nav.path = "."
rand = "0.9.0"

[[bench]]
harness = false
name = "benchmarks"
path = "./benches/benchmarks.rs"
